[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "july-caesar"
version = "0.1.1"
description = "Interactive case-conversion clipboard utility"
dependencies = ["pyperclip"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.scripts]
caesar = "caesar.main:main"

[project.urls]
Homepage = "https://github.com/DODO-unique/caesar"